extend network to yml and readStream